--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -4,17 +4,16 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>Exterior House Painting in Askern DN6 | Home Repairs 4U</title>
+<title>Exterior House, Gate & Railing Painting in Askern DN6 | Home Repairs 4U</title>
 
-<link rel="canonical" href="https://homerepairs4u.com/services/Exterior-decorating.html">
+<link rel="canonical" href="https://homerepairs4u.com/services/exterior-decorating.html">
 <link rel="icon" href="/favicon.png" type="image/png">
 
-<meta name="description" content="Professional exterior house painting in Askern DN6. Home Repairs 4U paints walls, render, woodwork, doors and frames. Call 07735 873694 for a free quote.">
+<meta name="description" content="Exterior house, metal gate and railing painting in Askern DN6. Home Repairs 4U paints walls, render, woodwork and metalwork. Call 07735 873694 for a free quote.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-/* HEADER */
 header{
 text-align:center;
 padding:25px 10px;
@@ -27,7 +26,6 @@ max-height:90px;
 width:auto;
 }
 
-/* CALL BUTTON */
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -46,7 +44,6 @@ background:#333;
 color:#fff;
 }
 
-/* MAIN */
 main{
 max-width:900px;
 margin:40px auto;
@@ -60,7 +57,6 @@ h1, h2{
 color:#000;
 }
 
-/* FOOTER */
 .site-footer{
 background:#000;
 color:#fff;
@@ -87,7 +83,6 @@ text-decoration:none;
 
 <body>
 
-<!-- HEADER -->
 <header>
 <img src="/images/logo.webp"
 alt="Home Repairs 4U logo"
@@ -97,8 +92,7 @@ height="200"
 loading="eager">
 
 <div style="margin-top:10px;">
-<a href="/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
+<a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
 Home
 </a>
 </div>
@@ -108,47 +102,57 @@ Home
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
-<!-- MAIN CONTENT -->
 <main>
 <h1>Exterior House Painting in Askern DN6</h1>
 
 <p>
-Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong>, helping homeowners protect and refresh their property.
-A high-quality exterior paint finish not only improves kerb appeal but also protects walls and woodwork from rain, frost, and everyday wear.
+Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong>, helping homeowners protect and improve the appearance of their property.
+A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.
 </p>
 
 <p>
 We carry out all aspects of exterior house painting, including masonry, render, and exterior woodwork.
-Every job begins with careful preparation such as cleaning, sanding, minor repairs, and priming to ensure the paint adheres properly and lasts longer.
-We use durable exterior paints designed for the UK climate, giving your home a smart and long-lasting finish.
+Each job starts with thorough preparation such as cleaning, sanding, minor repairs, and priming to ensure a durable and long-lasting finish.
+We use high-quality exterior paints suitable for the UK climate.
 </p>
 
 <p>
 Our services include painting exterior walls, window frames, doors, soffits, fascias, and other exposed woodwork.
-Whether you need a full repaint or maintenance painting, we tailor our service to suit your property and budget.
+Whether you need a full repaint or maintenance painting, we tailor our work to suit your home and budget.
+</p>
+
+<h2>Metal Rail and Gate Painting</h2>
+
+<p>
+Home Repairs 4U also offers professional <strong>metal rail and gate painting in Askern DN6</strong>.
+Painting metal railings and gates not only improves appearance but also protects against rust, corrosion, and weather damage.
 </p>
 
 <p>
-As a reliable local tradesman, Home Repairs 4U takes pride in clean workmanship, clear communication, and competitive pricing.
-We work efficiently and respectfully, delivering excellent results with minimal disruption.
+Our process includes surface cleaning, rust removal, sanding, and the application of suitable metal primers before finishing with durable exterior metal paint.
+This ensures a smooth, long-lasting finish designed to withstand the elements.
+</p>
+
+<p>
+We paint wrought iron gates, metal railings, handrails, fences, and other exterior metalwork.
+Whether your metalwork needs refreshing or full restoration, we provide a neat and reliable service at competitive prices.
 </p>
 
 <p style="font-weight:bold;">
-For trusted exterior house painters in Askern DN6, call
+For exterior house, gate and railing painting in Askern DN6, call
 <a href="tel:07735873694">07735 873694</a> for a free quote.
 </p>
 </main>
 
-<!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 
 <div class="footer-services">
 <p>Our Services:</p>
-<a href="/services/Exterior-decorating.html">Exterior Decorating</a>
+<a href="/services/exterior-decorating.html">Exterior Decorating</a>
 <a href="/services/garden.html">Garden</a>
 <a href="/services/guttering.html">Guttering</a>
-<a href="/services/Pressure-washing.html">Pressure Washing</a>
+<a href="/services/pressure-washing.html">Pressure Washing</a>
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
