--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -4,12 +4,12 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>Exterior House, Gate & Railing Painting in Askern DN6 | Home Repairs 4U</title>
+<title>Exterior House, Gate & Fence Painting in Askern DN6 | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/services/exterior-decorating.html">
 <link rel="icon" href="/favicon.png" type="image/png">
 
-<meta name="description" content="Exterior house, metal gate and railing painting in Askern DN6. Home Repairs 4U paints walls, render, woodwork and metalwork. Call 07735 873694 for a free quote.">
+<meta name="description" content="Exterior house, metal gate, railing and wood fence painting in Askern DN6. Home Repairs 4U provides reliable exterior decorating. Call 07735 873694.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
@@ -111,35 +111,40 @@ A quality exterior paint finish enhances kerb appeal while protecting walls and 
 </p>
 
 <p>
-We carry out all aspects of exterior house painting, including masonry, render, and exterior woodwork.
-Each job starts with thorough preparation such as cleaning, sanding, minor repairs, and priming to ensure a durable and long-lasting finish.
-We use high-quality exterior paints suitable for the UK climate.
-</p>
-
-<p>
-Our services include painting exterior walls, window frames, doors, soffits, fascias, and other exposed woodwork.
-Whether you need a full repaint or maintenance painting, we tailor our work to suit your home and budget.
+We paint masonry, render, and exterior woodwork, with every job starting with proper preparation such as cleaning, sanding, repairs, and priming.
+We use durable exterior paints suitable for the UK climate to ensure long-lasting results.
 </p>
 
 <h2>Metal Rail and Gate Painting</h2>
 
 <p>
-Home Repairs 4U also offers professional <strong>metal rail and gate painting in Askern DN6</strong>.
-Painting metal railings and gates not only improves appearance but also protects against rust, corrosion, and weather damage.
+We offer reliable <strong>metal rail and gate painting in Askern DN6</strong> to protect and restore exterior metalwork.
+Metal gates and railings are exposed to harsh weather and can quickly rust if not maintained.
 </p>
 
 <p>
-Our process includes surface cleaning, rust removal, sanding, and the application of suitable metal primers before finishing with durable exterior metal paint.
-This ensures a smooth, long-lasting finish designed to withstand the elements.
+Our process includes rust removal, surface preparation, metal priming, and finishing with high-quality exterior metal paint.
+This provides a clean, durable finish that improves appearance and helps prevent corrosion.
+</p>
+
+<h2>Wood Fence and Gate Painting</h2>
+
+<p>
+Home Repairs 4U also specialises in <strong>wood fence and gate painting in Askern DN6</strong>.
+Regular painting or staining helps protect timber fencing and gates from rot, moisture, and sun damage while keeping them looking neat and well maintained.
 </p>
 
 <p>
-We paint wrought iron gates, metal railings, handrails, fences, and other exterior metalwork.
-Whether your metalwork needs refreshing or full restoration, we provide a neat and reliable service at competitive prices.
+We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
+Whether you want a fresh new colour or to preserve the natural look of the wood, we tailor the finish to your preference.
+</p>
+
+<p>
+From small garden gates to full boundary fencing, we provide a tidy, efficient service with lasting results at competitive prices.
 </p>
 
 <p style="font-weight:bold;">
-For exterior house, gate and railing painting in Askern DN6, call
+For exterior house, metal and wood painting in Askern DN6, call
 <a href="tel:07735873694">07735 873694</a> for a free quote.
 </p>
 </main>
