--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -11,7 +11,16 @@
 
 <meta name="description" content="Exterior house, metal gate, railing and wood fence painting in Askern DN6. Home Repairs 4U provides reliable exterior decorating. Call 07735 873694.">
 
-<link rel="preload" as="image" href="/images/logo.webp" />
+<!-- Social / Image Meta -->
+<meta property="og:title" content="Exterior House Painting in Askern DN6 | Home Repairs 4U">
+<meta property="og:description" content="Professional exterior house painting with before and after results in Askern DN6.">
+<meta property="og:image" content="https://steely2968.github.io/images/house-before-after.webp">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://steely2968.github.io/images/house-before-after.webp">
+
+<link rel="preload" as="image" href="https://steely2968.github.io/images/house-before-after.webp" />
 
 <style>
 header{
@@ -55,6 +64,17 @@ color:#222;
 
 h1, h2{
 color:#000;
+}
+
+.painting-image{
+margin:25px 0;
+text-align:center;
+}
+
+.painting-image img{
+max-width:100%;
+height:auto;
+border-radius:6px;
 }
 
 .site-footer{
@@ -110,6 +130,16 @@ Home Repairs 4U provides professional <strong>exterior house painting in Askern 
 A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.
 </p>
 
+<!-- IMAGE -->
+<div class="painting-image">
+<img src="https://steely2968.github.io/images/house-before-after.webp"
+alt="Before and after exterior house painting showing a freshly painted home in Askern DN6"
+width="900"
+height="500"
+loading="lazy"
+decoding="async">
+</div>
+
 <p>
 We paint masonry, render, and exterior woodwork, with every job starting with proper preparation such as cleaning, sanding, repairs, and priming.
 We use durable exterior paints suitable for the UK climate to ensure long-lasting results.
@@ -136,11 +166,7 @@ Regular painting or staining helps protect timber fencing and gates from rot, mo
 
 <p>
 We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
-Whether you want a fresh new colour or to preserve the natural look of the wood, we tailor the finish to your preference.
-</p>
-
-<p>
-From small garden gates to full boundary fencing, we provide a tidy, efficient service with lasting results at competitive prices.
+From small garden gates to full boundary fencing, we deliver a tidy, reliable service.
 </p>
 
 <p style="font-weight:bold;">
