--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -130,7 +130,7 @@ Home Repairs 4U provides professional <strong>exterior house painting in Askern 
 A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.
 </p>
 
-<!-- IMAGE -->
+<!-- IMAGE: House Before/After -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/house-before-after.webp"
 alt="Before and after exterior house painting showing a freshly painted home in Askern DN6"
@@ -168,6 +168,16 @@ Regular painting or staining helps protect timber fencing and gates from rot, mo
 We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
 From small garden gates to full boundary fencing, we deliver a tidy, reliable service.
 </p>
+
+<!-- IMAGE: Wood Fence Painting -->
+<div class="painting-image">
+<img src="https://steely1968.github.io/images/fence-painting.webp"
+alt="Freshly painted wooden fence and gate in Askern DN6, before and after"
+width="900"
+height="500"
+loading="lazy"
+decoding="async">
+</div>
 
 <p style="font-weight:bold;">
 For exterior house, metal and wood painting in Askern DN6, call
