--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -164,20 +164,20 @@ Home Repairs 4U also specialises in <strong>wood fence and gate painting in Aske
 Regular painting or staining helps protect timber fencing and gates from rot, moisture, and sun damage while keeping them looking neat and well maintained.
 </p>
 
-<p>
-We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
-From small garden gates to full boundary fencing, we deliver a tidy, reliable service.
-</p>
-
-<!-- IMAGE: Wood Fence Painting -->
+<!-- IMAGE: Fence Painting under first paragraph -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/fence-painting.webp"
-alt="Freshly painted wooden fence and gate in Askern DN6, before and after"
+alt="Freshly painted wooden fence and gate in Askern DN6"
 width="900"
 height="500"
 loading="lazy"
 decoding="async">
 </div>
+
+<p>
+We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
+From small garden gates to full boundary fencing, we deliver a tidy, reliable service.
+</p>
 
 <p style="font-weight:bold;">
 For exterior house, metal and wood painting in Askern DN6, call
