--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -152,6 +152,16 @@ We offer reliable <strong>metal rail and gate painting in Askern DN6</strong> to
 Metal gates and railings are exposed to harsh weather and can quickly rust if not maintained.
 </p>
 
+<!-- IMAGE: Metal Gate Painting -->
+<div class="painting-image">
+<img src="https://steely1968.github.io/images/metal-gate-painting.webp"
+alt="Freshly painted metal gate and railings in Askern DN6"
+width="900"
+height="500"
+loading="lazy"
+decoding="async">
+</div>
+
 <p>
 Our process includes rust removal, surface preparation, metal priming, and finishing with high-quality exterior metal paint.
 This provides a clean, durable finish that improves appearance and helps prevent corrosion.
