--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -35,7 +35,7 @@ max-height:90px;
 width:auto;
 }
 
-.call-btn{
+.call-btn, .quote-btn{
 display:inline-block;
 margin-top:18px;
 padding:14px 28px;
@@ -48,7 +48,7 @@ border-radius:6px;
 border:2px solid #000;
 }
 
-.call-btn:hover{
+.call-btn:hover, .quote-btn:hover{
 background:#333;
 color:#fff;
 }
@@ -144,6 +144,11 @@ decoding="async">
 We paint masonry, render, and exterior woodwork, with every job starting with proper preparation such as cleaning, sanding, repairs, and priming.
 We use durable exterior paints suitable for the UK climate to ensure long-lasting results.
 </p>
+
+<!-- NEW BUTTON: Instant house painting quote -->
+<div style="text-align:center; margin-top:20px;">
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Instant house painting quote</a>
+</div>
 
 <h2>Metal Rail and Gate Painting</h2>
 
