--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -172,6 +172,11 @@ Our process includes rust removal, surface preparation, metal priming, and finis
 This provides a clean, durable finish that improves appearance and helps prevent corrosion.
 </p>
 
+<!-- NEW BUTTON: Instant Gate and Rail Quote -->
+<div style="text-align:center; margin-top:20px;">
+<a href="https://homerepairs4u.com/quotes/rail-painting.html" class="quote-btn">Instant gate and rail quote</a>
+</div>
+
 <h2>Wood Fence and Gate Painting</h2>
 
 <p>
