--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -145,7 +145,7 @@ We paint masonry, render, and exterior woodwork, with every job starting with pr
 We use durable exterior paints suitable for the UK climate to ensure long-lasting results.
 </p>
 
-<!-- NEW BUTTON: Instant house painting quote -->
+<!-- BUTTON: Instant house painting quote -->
 <div style="text-align:center; margin-top:20px;">
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Instant house painting quote</a>
 </div>
@@ -172,7 +172,7 @@ Our process includes rust removal, surface preparation, metal priming, and finis
 This provides a clean, durable finish that improves appearance and helps prevent corrosion.
 </p>
 
-<!-- NEW BUTTON: Instant Gate and Rail Quote -->
+<!-- BUTTON: Instant Gate and Rail Quote -->
 <div style="text-align:center; margin-top:20px;">
 <a href="https://homerepairs4u.com/quotes/rail-painting.html" class="quote-btn">Instant gate and rail quote</a>
 </div>
@@ -198,6 +198,11 @@ decoding="async">
 We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
 From small garden gates to full boundary fencing, we deliver a tidy, reliable service.
 </p>
+
+<!-- BUTTON: Instant Fence Paint Quote -->
+<div style="text-align:center; margin-top:20px;">
+<a href="https://homerepairs4u.com/quotes/fence-quote.html" class="quote-btn">Instant fence paint quote</a>
+</div>
 
 <p style="font-weight:bold;">
 For exterior house, metal and wood painting in Askern DN6, call
