--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -9,210 +9,211 @@
 <link rel="canonical" href="https://homerepairs4u.com/services/exterior-decorating.html">
 <link rel="icon" href="/favicon.png" type="image/png">
 
-<meta name="description" content="Exterior house, metal gate, railing and wood fence painting in Askern DN6. Home Repairs 4U provides reliable exterior decorating. Call 07735 873694.">
+<meta name="description" content="Exterior house, metal gate, railing and wood fence painting in Askern DN6 and within a six mile radius. Home Repairs 4U provides reliable exterior decorating. Call 07735 873694.">
 
-<!-- Social / Image Meta -->
-<meta property="og:title" content="Exterior House Painting in Askern DN6 | Home Repairs 4U">
-<meta property="og:description" content="Professional exterior house painting with before and after results in Askern DN6.">
-<meta property="og:image" content="https://steely1968.github.io/images/house-before-after.webp">
-<meta property="og:type" content="website">
+<!-- FAQ Structured Data -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "What areas do you cover for house painting?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Home Repairs 4U covers Askern DN6 and a six mile radius around it, including Bentley, Adwick, Skellow, Norton, Campsall and surrounding villages."
+}
+},
+{
+"@type": "Question",
+"name": "How long does exterior house painting take?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "The duration varies by size and condition of your property, but most exterior house painting jobs in Askern take between one and three days."
+}
+},
+{
+"@type": "Question",
+"name": "Do you provide free quotes for gate and fence painting?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, free quotes are available for metal gate, rail, wood fence and house painting services within Askern and nearby areas."
+}
+},
+{
+"@type": "Question",
+"name": "Are your paints suitable for the UK weather?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we use high-quality exterior paints and primers that are designed to withstand UK weather conditions, including rain, frost and sunlight."
+}
+},
+{
+"@type": "Question",
+"name": "Do you prepare surfaces before painting?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, all our jobs include surface preparation such as cleaning, sanding, rust removal (for metal) and priming to ensure long-lasting results."
+}
+}
+]
+}
+</script>
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://steely1968.github.io/images/house-before-after.webp">
-
-<link rel="preload" as="image" href="https://steely1968.github.io/images/house-before-after.webp" />
+<!-- LocalBusiness / Geo Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"image": "https://steely1968.github.io/images/logo.webp",
+"url": "https://homerepairs4u.com",
+"telephone": "+447735873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "Askern DN6",
+"addressLocality": "Askern",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5710,
+"longitude": -1.1200
+},
+"areaServed": {
+"@type": "GeoCircle",
+"geoMidpoint": {
+"@type": "GeoCoordinates",
+"latitude": 53.5710,
+"longitude": -1.1200
+},
+"geoRadius": 9656
+},
+"openingHours": "Mo-Sa 08:00-18:00",
+"sameAs": [
+"https://www.facebook.com/HomeRepairs4U",
+"https://www.instagram.com/HomeRepairs4U"
+]
+}
+</script>
 
 <style>
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
-
-.logo{
-max-height:90px;
-width:auto;
-}
-
-.call-btn, .quote-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
-
-.call-btn:hover, .quote-btn:hover{
-background:#333;
-color:#fff;
-}
-
-main{
-max-width:900px;
-margin:40px auto;
-padding:0 15px;
-font-family:Arial, sans-serif;
-line-height:1.7;
-color:#222;
-}
-
-h1, h2{
-color:#000;
-}
-
-.painting-image{
-margin:25px 0;
-text-align:center;
-}
-
-.painting-image img{
-max-width:100%;
-height:auto;
-border-radius:6px;
-}
-
-.site-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
-}
-
-.footer-services{
-background-color:black;
-padding:20px;
-text-align:center;
-margin-top:15px;
-}
-
-.footer-services a{
-color:white;
-margin:0 10px;
-text-decoration:none;
-}
+header{ text-align:center; padding:25px 10px; background:#fff; border-bottom:4px solid #27ae60; }
+.logo{ max-height:90px; width:auto; }
+.call-btn, .quote-btn{ display:inline-block; margin-top:18px; padding:14px 28px; background:#000; color:#fff; font-size:19px; text-decoration:none; font-weight:bold; border-radius:6px; border:2px solid #000; }
+.call-btn:hover, .quote-btn:hover{ background:#333; color:#fff; }
+main{ max-width:900px; margin:40px auto; padding:0 15px; font-family:Arial, sans-serif; line-height:1.7; color:#222; }
+h1,h2{ color:#000; }
+.painting-image{ margin:25px 0; text-align:center; }
+.painting-image img{ max-width:100%; height:auto; border-radius:6px; }
+.faq-section{ margin-top:40px; }
+.faq-section h3{ font-size:1.5em; margin-bottom:15px; color:#000; }
+.faq-section .faq-item{ margin-bottom:15px; }
+.faq-section .faq-item button{ width:100%; text-align:left; padding:10px; font-size:1em; background:#f4f4f4; border:none; border-radius:4px; cursor:pointer; }
+.faq-section .faq-item button:after{ content:'+'; float:right; }
+.faq-section .faq-item button.active:after{ content:'–'; }
+.faq-section .faq-item .faq-answer{ display:none; padding-top:10px; }
+.site-footer{ background:#000; color:#fff; text-align:center; padding:25px 15px; margin-top:40px; font-size:14px; }
+.footer-services{ background-color:black; padding:20px; text-align:center; margin-top:15px; }
+.footer-services a{ color:white; margin:0 10px; text-decoration:none; }
 </style>
 </head>
 
 <body>
 
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600"
-height="200"
-loading="eager">
-
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="margin-top:10px;">
-<a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
-Home
-</a>
+<a href="/" style="font-size:20px;color:#000;text-decoration:none;font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
 <main>
 <h1>Exterior House Painting in Askern DN6</h1>
+<p>Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong> and within a six mile radius. A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.</p>
 
-<p>
-Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong>, helping homeowners protect and improve the appearance of their property.
-A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.
-</p>
-
-<!-- IMAGE: House Before/After -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/house-before-after.webp"
 alt="Before and after exterior house painting showing a freshly painted home in Askern DN6"
-width="900"
-height="500"
-loading="lazy"
-decoding="async">
+width="900" height="500" loading="lazy" decoding="async">
 </div>
 
-<p>
-We paint masonry, render, and exterior woodwork, with every job starting with proper preparation such as cleaning, sanding, repairs, and priming.
-We use durable exterior paints suitable for the UK climate to ensure long-lasting results.
-</p>
+<p>We paint masonry, render and exterior woodwork, with each job starting with preparation such as cleaning, sanding, repairs and priming to achieve long-lasting results.</p>
 
-<!-- BUTTON: Instant house painting quote -->
 <div style="text-align:center; margin-top:20px;">
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Instant house painting quote</a>
 </div>
 
 <h2>Metal Rail and Gate Painting</h2>
+<p>We offer reliable <strong>metal rail and gate painting in Askern DN6</strong> and nearby areas. Outdoor metalwork can rust if left unprotected, so regular painting helps extend life and refresh appearance.</p>
 
-<p>
-We offer reliable <strong>metal rail and gate painting in Askern DN6</strong> to protect and restore exterior metalwork.
-Metal gates and railings are exposed to harsh weather and can quickly rust if not maintained.
-</p>
-
-<!-- IMAGE: Metal Gate Painting -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/metal-gate-painting.webp"
 alt="Freshly painted metal gate and railings in Askern DN6"
-width="900"
-height="500"
-loading="lazy"
-decoding="async">
+width="900" height="500" loading="lazy" decoding="async">
 </div>
 
-<p>
-Our process includes rust removal, surface preparation, metal priming, and finishing with high-quality exterior metal paint.
-This provides a clean, durable finish that improves appearance and helps prevent corrosion.
-</p>
+<p>Our metal painting process includes rust removal, surface preparation, priming and high-quality exterior paint for long-lasting protection.</p>
 
-<!-- BUTTON: Instant Gate and Rail Quote -->
 <div style="text-align:center; margin-top:20px;">
 <a href="https://homerepairs4u.com/quotes/rail-painting.html" class="quote-btn">Instant gate and rail quote</a>
 </div>
 
 <h2>Wood Fence and Gate Painting</h2>
+<p>Home Repairs 4U also specialises in <strong>wood fence and gate painting in Askern DN6</strong> and surrounding villages. This helps protect timber from moisture, rot and sun damage while keeping fences looking neat and refreshed.</p>
 
-<p>
-Home Repairs 4U also specialises in <strong>wood fence and gate painting in Askern DN6</strong>.
-Regular painting or staining helps protect timber fencing and gates from rot, moisture, and sun damage while keeping them looking neat and well maintained.
-</p>
-
-<!-- IMAGE: Fence Painting under first paragraph -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/fence-painting.webp"
 alt="Freshly painted wooden fence and gate in Askern DN6"
-width="900"
-height="500"
-loading="lazy"
-decoding="async">
+width="900" height="500" loading="lazy" decoding="async">
 </div>
 
-<p>
-We prepare wooden fences and gates by cleaning, sanding, and treating the surface before applying suitable exterior paints or wood stains.
-From small garden gates to full boundary fencing, we deliver a tidy, reliable service.
-</p>
+<p>We prepare wooden surfaces by cleaning, sanding and treating before applying the appropriate exterior paint or stain. From small garden gates to full boundary fencing, we provide a tidy, reliable service.</p>
 
-<!-- BUTTON: Instant Fence Paint Quote -->
 <div style="text-align:center; margin-top:20px;">
 <a href="https://homerepairs4u.com/quotes/fence-quote.html" class="quote-btn">Instant fence paint quote</a>
 </div>
 
-<p style="font-weight:bold;">
-For exterior house, metal and wood painting in Askern DN6, call
-<a href="tel:07735873694">07735 873694</a> for a free quote.
-</p>
+<p style="font-weight:bold;">For exterior house, metal and wood painting in Askern DN6 and within six miles, call <a href="tel:07735873694">07735 873694</a> for a free quote.</p>
+
+<!-- FAQ Section -->
+<div class="faq-section">
+<h3>Frequently Asked Questions</h3>
+<div class="faq-item">
+<button type="button">What areas do you cover?</button>
+<div class="faq-answer">
+<p>We serve Askern DN6 and within approximately six miles, including Bentley, Adwick, Skellow, Norton and Campsall.</p>
+</div>
+</div>
+<div class="faq-item">
+<button type="button">How long does exterior painting take?</button>
+<div class="faq-answer">
+<p>Typical jobs take between one and three days, depending on size and surface preparation needed.</p>
+</div>
+</div>
+<div class="faq-item">
+<button type="button">Do you provide free quotes?</button>
+<div class="faq-answer">
+<p>Yes — we offer free quotes for house, gate, rail and fence painting within our service area.</p>
+</div>
+</div>
+<div class="faq-item">
+<button type="button">Are your paints suitable for UK weather?</button>
+<div class="faq-answer">
+<p>Yes — we use exterior paints and primers designed to withstand rain, frost and changing conditions.</p>
+</div>
+</div>
+</div>
+
 </main>
 
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
-
 <div class="footer-services">
 <p>Our Services:</p>
 <a href="/services/exterior-decorating.html">Exterior Decorating</a>
@@ -222,6 +223,17 @@ For exterior house, metal and wood painting in Askern DN6, call
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
+
+<script>
+// FAQ toggle
+document.querySelectorAll('.faq-item button').forEach(btn => {
+btn.addEventListener('click', () => {
+btn.classList.toggle('active');
+const ans = btn.nextElementSibling;
+ans.style.display = ans.style.display === 'block' ? 'none' : 'block';
+});
+});
+</script>
 
 </body>
 </html>
