--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -11,6 +11,9 @@
 
 <meta name="description" content="Exterior house, metal gate, railing and wood fence painting in Askern DN6 and within a six mile radius. Home Repairs 4U provides reliable exterior decorating. Call 07735 873694.">
 
+<!-- Preload hero image for faster LCP -->
+<link rel="preload" as="image" href="https://steely1968.github.io/images/house-before-after.webp">
+
 <!-- FAQ Structured Data -->
 <script type="application/ld+json">
 {
@@ -134,13 +137,21 @@ h1,h2{ color:#000; }
 </header>
 
 <main>
+
 <h1>Exterior House Painting in Askern DN6</h1>
 <p>Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong> and within a six mile radius. A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.</p>
 
+<!-- HERO IMAGE WITH SRCSET & EAGER LOADING -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/house-before-after.webp"
+srcset="https://steely1968.github.io/images/house-before-after-480.webp 480w,
+https://steely1968.github.io/images/house-before-after-768.webp 768w,
+https://steely1968.github.io/images/house-before-after.webp 900w"
+sizes="(max-width: 900px) 100vw, 900px"
 alt="Before and after exterior house painting showing a freshly painted home in Askern DN6"
-width="900" height="500" loading="lazy" decoding="async">
+width="900" height="500"
+loading="eager"
+decoding="async">
 </div>
 
 <p>We paint masonry, render and exterior woodwork, with each job starting with preparation such as cleaning, sanding, repairs and priming to achieve long-lasting results.</p>
@@ -155,7 +166,9 @@ width="900" height="500" loading="lazy" decoding="async">
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/metal-gate-painting.webp"
 alt="Freshly painted metal gate and railings in Askern DN6"
-width="900" height="500" loading="lazy" decoding="async">
+width="900" height="500"
+loading="eager"
+decoding="async">
 </div>
 
 <p>Our metal painting process includes rust removal, surface preparation, priming and high-quality exterior paint for long-lasting protection.</p>
@@ -170,7 +183,9 @@ width="900" height="500" loading="lazy" decoding="async">
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/fence-painting.webp"
 alt="Freshly painted wooden fence and gate in Askern DN6"
-width="900" height="500" loading="lazy" decoding="async">
+width="900" height="500"
+loading="eager"
+decoding="async">
 </div>
 
 <p>We prepare wooden surfaces by cleaning, sanding and treating before applying the appropriate exterior paint or stain. From small garden gates to full boundary fencing, we provide a tidy, reliable service.</p>
@@ -184,30 +199,35 @@ width="900" height="500" loading="lazy" decoding="async">
 <!-- FAQ Section -->
 <div class="faq-section">
 <h3>Frequently Asked Questions</h3>
+
 <div class="faq-item">
 <button type="button">What areas do you cover?</button>
 <div class="faq-answer">
 <p>We serve Askern DN6 and within approximately six miles, including Bentley, Adwick, Skellow, Norton and Campsall.</p>
 </div>
 </div>
+
 <div class="faq-item">
 <button type="button">How long does exterior painting take?</button>
 <div class="faq-answer">
 <p>Typical jobs take between one and three days, depending on size and surface preparation needed.</p>
 </div>
 </div>
+
 <div class="faq-item">
 <button type="button">Do you provide free quotes?</button>
 <div class="faq-answer">
 <p>Yes — we offer free quotes for house, gate, rail and fence painting within our service area.</p>
 </div>
 </div>
+
 <div class="faq-item">
 <button type="button">Are your paints suitable for UK weather?</button>
 <div class="faq-answer">
 <p>Yes — we use exterior paints and primers designed to withstand rain, frost and changing conditions.</p>
 </div>
 </div>
+
 </div>
 
 </main>
