--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -141,7 +141,7 @@ h1,h2{ color:#000; }
 <h1>Exterior House Painting in Askern DN6</h1>
 <p>Home Repairs 4U provides professional <strong>exterior house painting in Askern DN6</strong> and within a six mile radius. A quality exterior paint finish enhances kerb appeal while protecting walls and woodwork from rain, frost, and long-term weather damage.</p>
 
-<!-- HERO IMAGE WITH SRCSET & EAGER LOADING -->
+<!-- HERO IMAGE -->
 <div class="painting-image">
 <img src="https://steely1968.github.io/images/house-before-after.webp"
 srcset="https://steely1968.github.io/images/house-before-after-480.webp 480w,
@@ -167,7 +167,7 @@ decoding="async">
 <img src="https://steely1968.github.io/images/metal-gate-painting.webp"
 alt="Freshly painted metal gate and railings in Askern DN6"
 width="900" height="500"
-loading="eager"
+loading="lazy"
 decoding="async">
 </div>
 
@@ -184,7 +184,7 @@ decoding="async">
 <img src="https://steely1968.github.io/images/fence-painting.webp"
 alt="Freshly painted wooden fence and gate in Askern DN6"
 width="900" height="500"
-loading="eager"
+loading="lazy"
 decoding="async">
 </div>
 
