--- a/services/exterior-decorating.html
+++ b/services/exterior-decorating.html
@@ -11,7 +11,7 @@
 
 <meta name="description" content="Exterior house, metal gate, railing and wood fence painting in Askern DN6 and within a six mile radius. Home Repairs 4U provides reliable exterior decorating. Call 07735 873694.">
 
-<!-- Preload hero image for faster LCP -->
+<!-- Preload hero image -->
 <link rel="preload" as="image" href="https://steely1968.github.io/images/house-before-after.webp">
 
 <!-- FAQ Structured Data -->
@@ -128,7 +128,7 @@ h1,h2{ color:#000; }
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
+<img src="https://steely1968.github.io/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="margin-top:10px;">
 <a href="/" style="font-size:20px;color:#000;text-decoration:none;font-weight:600;">Home</a>
 </div>
