--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -2,15 +2,18 @@
 <html lang="en-GB">
 <head>
 
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>ADD TITLE</title>
+
+<title>Exterior House Painting Quote Calculator | Askern DN6 | Home Repairs 4U</title>
+
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/house-painting.html">
-<meta name="description" content="ADD META">
+
+<meta name="description" content="Get an instant exterior house painting quote in Askern DN6 and nearby areas. Our online calculator gives homeowners a quick, transparent estimate before booking.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
+
 <style>
 /* HEADER STYLING */
 header{
@@ -43,6 +46,26 @@ background:#333;
 color:#fff;
 }
 
+/* MAIN CONTENT */
+main{
+max-width:900px;
+margin:40px auto;
+padding:0 15px;
+font-family:Arial, sans-serif;
+line-height:1.7;
+color:#222;
+}
+
+h1{
+font-size:2em;
+margin-bottom:15px;
+color:#000;
+}
+
+p{
+margin-bottom:18px;
+}
+
 /* FOOTER */
 .site-footer{
 background:#000;
@@ -54,18 +77,21 @@ font-size:14px;
 }
 
 .footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
+background-color:black;
+padding:20px;
+text-align:center;
+margin-top:15px;
 }
 
 .footer-services a{
-color: white;
-margin: 0 10px;
+color:white;
+margin:0 10px;
+text-decoration:none;
 }
 </style>
+</head>
 
+<body>
 
 <!-- ✅ HEADER -->
 <header>
@@ -85,6 +111,22 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
+<!-- ✅ MAIN CONTENT -->
+<main>
+
+<h1>Exterior House Painting Quote Calculator</h1>
+
+<p>Our exterior house painting quote calculator has been created to give homeowners a fast, clear idea of cost before committing to any work. If you live in Askern DN6 or within a six mile radius, this tool allows you to estimate the price of a complete exterior house paint without waiting for a site visit.</p>
+
+<p>Many customers want to understand potential costs upfront. This calculator helps remove uncertainty by considering key factors such as property size, number of exterior walls, surface condition, and access requirements. It provides a realistic guide price so you can plan your budget with confidence.</p>
+
+<p>The calculator is designed to save time for both you and us. Instead of guessing or searching online for vague price ranges, you receive a tailored estimate based on real exterior painting scenarios. This makes it easier to decide whether to move forward with a full quotation and inspection.</p>
+
+<p>Once you receive your instant estimate, we can then arrange a proper assessment to confirm details, prepare surfaces, and recommend the best exterior paint system for long-lasting protection against UK weather conditions.</p>
+
+<p><strong>Home Repairs 4U specialises in complete exterior house painting in Askern DN6 and surrounding areas.</strong> Our aim is to provide transparent pricing, professional workmanship, and a reliable service from start to finish.</p>
+
+</main>
 
 <!-- ✅ FOOTER -->
 <footer class="site-footer">
@@ -99,3 +141,6 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
+
+</body>
+</html>
